docs: overview added to readme